# Kleep

./: .gitignore  App.tsx  README.md  app.json  metro.config.js  metroNodeStub.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: android-apk.yml
docs/: NEXT-10.md  ROADMAP.md
scripts/: claude-smoke.ts  openrouter-smoke.ts
src/: index.ts
src/__tests__/: tier2.integration.test.ts  tier3.integration.test.ts  tier4.integration.test.ts
src/claude/: client.ts  costTracker.ts  fixtures.ts  index.ts  models.ts  realTransport.ts  retry.ts  secureKeyStore.ts  types.ts  zodToJsonSchema.ts
src/conversation/: buffer.ts  index.ts  types.ts
src/disposition/: index.ts  types.ts
src/embedding/: index.ts  stubEmbedder.ts  types.ts
src/explain/: WhyPanel.tsx  explain.ts  index.ts  types.ts
src/extraction/: autoRetainEngine.ts  claudeExtractor.ts  index.ts  llmExtractor.ts  patternExtractor.ts  types.ts
src/ingest/: index.ts  routerSink.ts  types.ts
src/kleep/: __init__.py
src/llm/: buildProvider.ts  claudeProvider.ts  costTracker.ts  index.ts  modelCatalog.ts  retry.ts  secureKeyStore.ts  types.ts  zodToJsonSchema.ts
src/memoryTools/: index.ts  rememberFact.ts  types.ts
src/prompts/: index.ts  promptLibrary.ts
src/reconciler/: attributeMerge.ts  dedupReconciler.ts  index.ts
src/reflection/: index.ts  reflectionEngine.ts  stubReflector.ts  types.ts
src/retrieval/: bm25.ts  entityIndex.ts  fusionRecallEngine.ts  index.ts  indexingSink.ts  tokenBudget.ts  tokenize.ts
src/router/: index.ts  memoryRouter.ts  networkRules.ts
(+123 files in other folders)
